style: avoid overlap of components

--- a/apps/client/src/features/app-settings/panel-content/PanelContent.module.scss
+++ b/apps/client/src/features/app-settings/panel-content/PanelContent.module.scss
@@ -1,7 +1,7 @@
 .corner {
   position: absolute;
   top: 1rem;
-  right: 1rem;
+  right: 2rem;
   z-index: 100;
 }
 
